# Cplex-TAP

./: .gitignore  ActiveDomains.cpp  ActiveDomains.h  CGTAPInstance.cpp  CGTAPInstance.h  CMakeLists.txt  CheckInsight.h  DiversificationInit.cpp  DiversificationInit.h  Element.h  FakeTimeStats.cpp  FakeTimeStats.h  GreedyHeuristic.cpp  GreedyHeuristic.h  InitTargets.h  IntensificationInit.cpp  IntensificationInit.h  JVMAdapter.cpp  JVMAdapter.h  KMppInit.cpp  KMppInit.h  KSInit.cpp  KSInit.h  KnapsackSolver.cpp  KnapsackSolver.h  Query.cpp  Query.h  README.md  RandomInit.h  RandomInitSkew.h  Solution.h  SolverMPLS.cpp  SolverMPLS.h  SolverVPLS.cpp  SolverVPLS.h  SolverVPLSDet.cpp  SolverVPLSDet.h  SolverVPLSHamming.cpp  SolverVPLSHamming.h  SolverVPLSHammingSX.cpp  (+32 more)
instances/: neolk_instance_1.txt  small_test_instance.txt
